--- a/static/es-admin.css
+++ b/static/es-admin.css
@@ -40,3 +40,17 @@
 	list-style: none;
 	margin: 0 0 1em;
 }
+
+.es-admin-site-section {
+	display: flex;
+	flex-direction: row;
+}
+
+.es-admin-site-section ol {
+	list-style: none;
+	margin: 0 0 1em;
+}
+
+.es-admin-site-section div {
+	width: 33%;
+}
